# IEPTaromInc

./: CMakeLists.txt  build-executable.sh  main.cc  tarom.cc
aeroport/: CMakeLists.txt
aeroport/src/: henri_coanda.cc  tarom.cc
avion/: CMakeLists.txt
avion/inc/: aripi.h  avion.h  avion_marfa.h  componenta.h  corp.h
avion/src/: aripi.cc  avion.cc  avion_marfa.cc  avion_pasageri.cc  motoare.cc
proj2/avion/: CMakeLists.txt
proj2/avion/inc/: avion_pasageri.h  motoare.h
proj2/avion/src/: avion_pasageri.cc  componenta.cc  corp.cc
proj3/: source.cc
